2006-09-29  Michal Nazarewicz  <mina86/AT/mina86.com>

	* libmpdclient.c, libmpdclient.h: + new version

	* mpd-show.c: + a bit rewritten
	+ supports formatting, added -f option
	+ scrolls title if too long

2006-09-28  Michal Nazarewicz  <mina86/AT/mina86.com>

	* README, slack-desc: + description changed
	+ email updated

2006-09-25  Michal Nazarewicz  <mina86/AT/mina86.com>

	* SlackBuild.gen: + New file

2006-09-14  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes.txt: + new quotes

	* lesspipe: + bug fixed when installing pipe
	+ better handling of temporary file names
	+ bug fixed in lessopen (file name was written to temp file)

	* null.c: -b and -B switches added
	+ -d/-D now performs "real" daemonization

	* check.sh: + check_proc() uses pkill if present
	+ better handling of temporary file
	+ '-n' added after '[' where needed for better portability

2006-08-08  Michal Nazarewicz  <mina86/AT/mina86.com>

	* tpwd: + fixed bug with options passed to bash function

2006-08-03  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile, README: + show added
	* show: New file

	* show: + ccze is extremally slow; fixed to use tail

	* tpwd: + added --function and --bash
	+ added <path> - 4th argument
	+ bit shortenend

2006-08-03  Michal Nazarewicz  <mina86/AT/mina86.com>

	* lesspipe: + added escaping
	+ added cache

	* mnt: New file

2006-07-31  Michal Nazarewicz  <mina86/AT/mina86.com>

	* tpwd: + bugfix: -h option was ignored
	+ shows usage if invalid number of arguments
	+ some reformatting

	* lesspipe: New file
	* Makefile, README: + lesspipe added

2006-07-08  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes.txt: + new quotes by Mikolaj Rej and Stanislaw Lem
	+ new authors: Doug Larson, Leszek Kolakowski, Zygmunt Mycielski
	+ Stanislaw Lem death date added

	* installkernel: + --overwrite option added
	+ --no-nice fixed

2006-06-03  Michal Nazarewicz  <mina86/AT/tlen.pl>

	* Makefile: + DEBUG support fixed (LDFLAGS had -s)
